--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kshitij Bahul",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "alexa-sdk": "1.0.9",
+    "eslint": "3.19.0"
+  }
 }
